--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Discord | Your Place to Talk & Hangout </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head> 
 <body>
@@ -37,7 +38,7 @@
             </a>
           </div>
     
-          <!-- Humbarget Option -->
+          <!-- Humbarger Option -->
           <div class="xl:hidden block">
             <i class="fa-solid fa-bars text-[23px]"></i>
           </div>
