--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <p class="font-[400] text-left xl:text-center 
           text-[16px] md:text-[20px] leading-[26px] 
-          md:leading-[32.5px] font-['gg sans'] w-[90%] md:w-[70%] xl:w-[90%] z-20 xl:self-center">
+          md:leading-[32.5px] w-[90%] md:w-[70%] xl:w-[90%] z-20 xl:self-center">
         ...where you can belong to a school club, a gaming group, or a
         worldwide art community. Where just you and a handful of friends can
         spend time together. A place that makes it easy to talk every day
