--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="w-[95%] xl:w-[60%] mx-auto">
           <h1
             class="font-[700] text-[20px] sm:text-[28px]
-             md:text-[48px] font-['ggSans'] leading-[24px]
+             md:text-[48px] leading-[24px]
               md:leading-[57.6px] mt-5 md:mt-0">
             Create an invite-only place where you belong
           </h1>
