--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               md:leading-[57.6px] mt-5 md:mt-0">
             Create an invite-only place where you belong
           </h1>
-          <p class="font-['ggSans'] text-[16px] sm:text-[20px] font-[400] mt-[24px]">
+          <p class="text-[16px] sm:text-[20px] font-[400] mt-[24px]">
             Discord servers are organized into topic-based channels where you
             can collaborate, share, and just talk about your day without
             clogging up a group chat.
