--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           class="font-[700] text-[20px] sm:text-[28px] md:text-[48px] leading-[24px] md:leading-[57.6px] mt-5 md:mt-0">
           From few to a fandom
         </h1>
-        <p class="font-['ggSans'] text-[16px] sm:text-[20px] font-[400] mt-[24px]">
+        <p class="text-[16px] sm:text-[20px] font-[400] mt-[24px]">
           Get any community running with moderation tools and custom member
           access. Give members special powers, set up private channels, and
           more.
@@ -181,7 +181,7 @@
   <div class="bg-[#f6f6f6]">
     <div class="flex flex-col container max-w-[1200px] mx-auto items-center py-14 md:py-32 px-5">
       <h1
-        class="font-[800] font-['GintoNord'] text-[20px] 
+        class="font-[800] text-[20px] 
         leading-[19px] md:leading-[32px] text-left md:text-center md:text-[40px]">
         RELIABLE TECH FOR STAYING CLOSE
       </h1>
