--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </p>
       <img src="./images/section4Image.svg" alt="" class="w-[100%]" />
 
-      <div class="text-[32px] font-['ggSans'] font-[700] relative 
+      <div class="text-[32px] font-[700] relative 
       w-[100%] flex flex-col items-center gap-[40px]">
         <img src="./images/section5Image.svg" class="md:block hidden absolute top-0" alt="" />
         <div class="md:text-center pt-[30px] leading-[38px]">
@@ -202,7 +202,7 @@
 
         <p
           class="bg-[#404EED] hidden md:block w-fit text-white text-[20px] 
-          font-[500] font-['ggSans'] px-[32px] py-[16px] rounded-full">
+          font-[500] px-[32px] py-[16px] rounded-full">
           <i class="fa-solid fa-download mr-2"></i>
           Download for Windows
         </p>
