--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
       <div
         class="bg-[#404EED] md:hidden flex justify-center items-center mt-4
-         text-white text-[20px] font-[500] font-['ggSans'] px-[32px] py-[16px] rounded-3xl">
+         text-white text-[20px] font-[500] px-[32px] py-[16px] rounded-3xl">
         <i class="fa-solid fa-download mr-2"></i>
         <p>Download from Google Play</p>
       </div>
