--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="flex xl:gap-[100px] gap-[40px] flex-col md:flex-row px-5">
         <!-- Left Section -->
         <div class="flex flex-col gap-[24px] w-[100%] md:w-[50%] xl:w-[20%]">
-          <h1 class="font-[800] font-['GintoNord'] text-[32px] leading-[30.4px]">
+          <h1 class="font-[800] text-[32px] leading-[30.4px]">
             IMAGINE A
             <br />
             PLACE
