--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <h2 class="text-[16px] xl:py-[10px] py-[15px]">
               Product
             </h2>
-            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400] font-['ggSans']">
+            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400]">
               <li class="hover:underline"><a href="#">Download</a></li>
               <li class="hover:underline"><a href="#">Nitro</a></li>
               <li class="hover:underline"><a href="#">Status</a></li>
