--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <h2 class="text-[16px] xl:py-[10px] py-[15px]">
               Company
             </h2>
-            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400] font-['ggSans']">
+            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400]">
               <li class="hover:underline"><a href="#">About</a></li>
               <li class="hover:underline"><a href="#">Jobs</a></li>
               <li class="hover:underline"><a href="#">Branding</a></li>
