--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
           </div>
 
           <div class="w-[50%] xl:w-fit">
-            <h2 class="text-[16px] font-['ggSans'] xl:py-[10px] py-[15px]">
+            <h2 class="text-[16px] xl:py-[10px] py-[15px]">
               Resources
             </h2>
-            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400] font-['ggSans']">
+            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400]">
               <li class="hover:underline"><a href="#">Colleges</a></li>
               <li class="hover:underline"><a href="#">Support</a></li>
               <li class="hover:underline"><a href="#">Safety</a></li>
