--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           </div>
 
           <div class="w-[50%] xl:w-fit">
-            <h2 class="text-[16px] font-['ggSans'] xl:py-[10px] py-[15px]">
+            <h2 class="text-[16px] xl:py-[10px] py-[15px]">
               Policies
             </h2>
             <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400] font-['ggSans']">
