--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <h2 class="text-[16px] xl:py-[10px] py-[15px]">
               Policies
             </h2>
-            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400] font-['ggSans']">
+            <ul class="text-white flex flex-col gap-[10px] leading-[24px] font-[400]">
               <li class="hover:underline"><a href="#">Terms</a></li>
               <li class="hover:underline"><a href="#">Privacy</a></li>
               <li class="hover:underline"><a href="#">Cookie Settings</a></li>
